--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack/webpack.prod",
-    "dev": "webpack --config webpack/webpack.dev"
+    "dev": "webpack --config webpack/webpack.dev",
+    "start": "webpack serve --config webpack/webpack.dev"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -22,6 +24,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "react-refresh": "^0.10.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
