--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@babel/preset-react": "^7.13.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.1",
-    "cross-env": "^7.0.3",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
@@ -27,13 +27,16 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-svgo": "^9.0.0",
+    "imagemin-webp": "^6.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
+    "react-refresh": "^0.10.0",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
-    "react-refresh": "^0.10.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
